--- a/Códigos/Módulo 3/C20 - Projeto Cordel/estilo/style.css
+++ b/Códigos/Módulo 3/C20 - Projeto Cordel/estilo/style.css
@@ -57,6 +57,10 @@ section {
     font-size: 4.5vw;
 }
 
+section > p {
+    padding-bottom: 2em;
+}
+
 section.normal {
     background-color: white;
     color: black;
@@ -65,12 +69,25 @@ section.normal {
 section.imagem {
     background-color: rgb(51, 51, 51);
     color: white;
+    background-attachment: fixed;
 }
 
 section.imagem > P {
     display: inline-block;
     padding: 5px;
     background-color: rgba(0, 0, 0, 0.253);
+    text-shadow: 1px 1px 0px black;
+}
+
+section#img01 {
+    background-image: url('../pacote-d012/imagens/background001.jpg');
+    background-position: right center;
+    background-size: cover;
+}
+
+section#img02 {
+    background-image: url('../pacote-d012/imagens/background002.jpg');
+    background-size: cover;
 }
 
 footer {
